--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -10,6 +10,7 @@
         <div class="input-group">
             <span class="input-group-text">$</span>
             <input id="price" type="number" class="form-control">
+            <span class="input-group-text">.00</span>
         </div>
     </div>
     <div class="form-group">
