--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,6 +1,5 @@
 
 <form>
-
     <div class="form-group">
         <label for="Model">Model</label>
         <input id="Model" type="text" class="form-control">
@@ -13,17 +12,23 @@
             <span class="input-group-text">.00</span>
         </div>
     </div>
-    <div class="form-group">
+    <div *ngIf="!isLoading" class="form-group">
         <label for="Brand">Brand</label>
-        <select id="Brand" class="form-control">
-            <option value=""></option>
+        <select  id="Brand" class="form-control">
+            <option [value]="">
+            </option>
+            <option *ngFor="let brand of brands" [value]="brand.key">
+                {{ brand.value.name }}
+            </option>
         </select>
     </div>
     <div class="form-group">
         <label for="imageUrl">Image URL</label>
         <input id="imageUrl" type="text" class="form-control">
     </div>
-
     <button class="btn btn-primary" style="margin-top: 1rem;">Save</button>
-
 </form>
+
+
+
+
