--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,2 +1,21 @@
-
-<a routerLink="/admin/products/new" class="btn btn-primary">New product</a>
+<p>
+    <a routerLink="/admin/products/new" class="btn btn-primary">New product</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Model</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of products">
+            <td>{{ p.value.model }}</td>
+            <td>{{ p.value.price }}</td>
+            <td>
+                <a class="btn btn-primary" [routerLink]="['/admin/products/', p.key]">Edit</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
