--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -42,6 +42,7 @@
                 </div>
             </div>
             <button class="btn btn-primary" style="margin-top: 1rem;">Save</button>
+            <button (click)="delete()" type="button" class="btn btn-danger" style="margin-top: 1rem;">Delete</button>
         </form>
     </div>
     <div class="col-md-6">
