--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,16 @@
-<p>products works!</p>
+<div class="row">
+    <ng-container *ngFor = "let p of products; let i = index">
+        <div class="col" style="margin-top: 5rem;">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ p.value.imageUrl }}" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">{{ p.value.brand }} - {{ p.value.model }}</h5>
+                  <p class="card-text">{{ p.value.price | currency:'USD':true }}</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="(i + 1) % 3 === 0" class="w-100"></div>
+    </ng-container> 
+</div>
+
