--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -3,7 +3,7 @@
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for="Model">Model</label>
-                <input #model="ngModel" [(ngModel)]="product.model" name="model" id="Model" type="text" class="form-control" required>
+                <input #model="ngModel" [(ngModel)]="product.value.model" name="model" id="Model" type="text" class="form-control" required>
                 <div class="alert alert-danger" *ngIf="model.touched && model.invalid">
                     Model is required.
                 </div>
@@ -12,7 +12,7 @@
                 <label for="price">Price</label>
                 <div class="input-group">
                     <span class="input-group-text">$</span>
-                    <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="number" class="form-control" required [min]="0">
+                    <input #price="ngModel" [(ngModel)]="product.value.price" name="price" id="price" type="number" class="form-control" required [min]="0">
                     <span class="input-group-text">.00</span>
                 </div>
                 <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label for="Brand">Brand</label>
-                <select #brand="ngModel" [(ngModel)]="product.brand" name="brand" id="Brand" class="form-control" required>
+                <select #brand="ngModel" [(ngModel)]="product.value.brand" name="brand" id="Brand" class="form-control" required>
                     <option [value]="">
                     </option>
                     <option *ngFor="let b of brands" [value]="b.key">
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label for="imageUrl">Image URL</label>
-                <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
+                <input #imageUrl="ngModel" [(ngModel)]="product.value.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
                 <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
                     <div *ngIf="imageUrl.errors.required">Image URL is required.</div>
                     <div *ngIf="imageUrl.errors.url">Please entrer a valid URL.</div>
@@ -46,13 +46,7 @@
         </form>
     </div>
     <div class="col-md-6">
-        <div *ngIf="product.model" class="card" >
-            <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
-            <div class="card-body">
-              <h6 class="card-title">{{ product.brand }} - {{ product.model }}</h6>
-              <p class="card-text">{{ product.price | currency:'USD':true }}</p>
-            </div>
-          </div>
+       <app-product-card [product]="product" [show-actions]="false"></app-product-card>
     </div>
 </div>
 
