--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -2,7 +2,7 @@
     <img *ngIf="product.value.imageUrl" src="{{ product.value.imageUrl }}" class="card-img-top">
     <div class="card-body">
       <h5 class="card-title">{{ product.value.brand }} - {{ product.value.model }}</h5>
-      <p class="card-text">{{ product.value.price | currency:'USD':true }}</p>
+      <p class="card-text">{{ product.value.price | currency:'USD':symbol }}</p>
     </div>
     <div class="card-footer d-grid">
       <a *ngIf="showActions" href="#" class="btn btn-primary btn-block">Add to Cart</a>
