first try add to shopping cart + writing some doc

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -5,6 +5,9 @@
       <p class="card-text">{{ product.value.price | currency:'USD':symbol }}</p>
     </div>
     <div class="card-footer d-grid">
-      <a *ngIf="showActions" href="#" class="btn btn-primary btn-block">Add to Cart</a>
+      <button 
+        (click)="addToCart(product)"
+        *ngIf="showActions"  
+        class="btn btn-primary btn-block">Add to Cart</button>
     </div>
 </div>
