--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -7,18 +7,22 @@
     <div *ngIf="showActions" class="card-footer d-grid">
       <button 
         *ngIf="getQuantity() === 0; else updateQuantity"
-        (click)="addToCart(product)"
+        (click)="addToCart()"
         class="btn btn-secondary btn-block">Add to Cart</button>
       <ng-template #updateQuantity>
         <div class="row">
           <div class="col-2 d-grid">
-            <button class="btn btn-secondary">-</button>
+            <button
+              (click)="removeFromCart()" 
+              class="btn btn-secondary">-</button>
           </div>
           <div class="col-8 text-center">
             <div> {{ getQuantity() }} in cart</div>
           </div>
           <div class="col d-grid">
-            <button class="btn btn-secondary">+</button>
+            <button
+              (click)="addToCart()"
+              class="btn btn-secondary">+</button>
           </div>
         </div>
       </ng-template>
