--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,35 @@
-<p>shopping-cart works!</p>
+<h1>Shopping Cart</h1>
+<ng-container *ngIf="shoppingCart">
+    <p>
+        You have {{ shoppingCart.totalItemsCount }} items in your shopping cart.
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of shoppingCart.items">
+                <td>
+                    {{ item.product.value.brand }} - {{ item.product.value.model }}
+                </td>
+                <td>
+                    {{ item.quantity }}
+                </td>
+                <td>
+                    {{ item.totalPrice | currency:'USD':symbol}}
+                </td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th></th>
+                <th></th>
+                <th> {{ shoppingCart.totalPrice | currency:'USD':symbol }}</th>
+            </tr>
+        </tfoot>
+    </table>
+</ng-container>
